--- a/gestion_doc/.github/workflows/django.yml
+++ b/gestion_doc/.github/workflows/django.yml
@@ -28,7 +28,7 @@ jobs:
           python manage.py migrate
           python manage.py test
 
-  build-and-push-to-dockerhub:
+  build-and-push:
     needs: build-test
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
