--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -31,7 +31,7 @@ jobs:
   build-and-push:
     needs: build-test
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/master'
 
     steps:
       - name: Checkout code
