--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -2,7 +2,9 @@ name: Django CI/CD
 
 on:
   push:
-    branches: [master]
+    branches: [master, main]
+  pull_request:
+    branches: [master, main]
 
 jobs:
   build-test:
@@ -17,21 +19,43 @@ jobs:
         with:
           python-version: '3.11'
 
+      - name: Cache pip dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run migrations and tests
+      - name: Check Django configuration
         working-directory: ./gestion_doc
         run: |
-          python manage.py migrate
-          python manage.py test
+          python manage.py check --deploy
+
+      - name: Run migrations
+        working-directory: ./gestion_doc
+        run: |
+          python manage.py migrate --run-syncdb
+
+      - name: Run tests
+        working-directory: ./gestion_doc
+        run: |
+          python manage.py test --verbosity=2
+
+      - name: Check for security issues
+        working-directory: ./gestion_doc
+        run: |
+          python manage.py check --deploy
 
   build-and-push:
     needs: build-test
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main'
 
     steps:
       - name: Checkout code
